<resources>
    <string name="app_name">Meal Factory</string>
    <string name="splash_screen">Meal Factory</string>
    <string name="title_home">All meals</string>
    <string name="title_fav_meal">Favorite</string>
    <string name="title_random_meal">Random</string>
    <string name="add_meal">Add meal</string>
    <string name="lb_title">Title</string>
    <string name="lb_type">Type</string>
    <string name="lb_category">Category</string>
    <string name="lb_ingredients">Ingredients</string>
    <string name="lb_time">Cooking time in minutes</string>
    <string name="lb_steps">Order of cooking</string>
    <string name="cd_meal_image">Image of meal</string>
    <string name="cd_add_meal_button">Add meal button</string>
    <string name="dialog_selectImage">Select an image</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="rv_mealcategory">Select meal category</string>
    <string name="rv_mealtype">Select meal type</string>
    <string name="rv_mealtime">Select cooking time</string>
    <string name="err_image">Please select or create meal image </string>
    <string name="err_title">Please write a title for your meal </string>
    <string name="err_type">Please select meal type </string>
    <string name="err_category">Please select meal category </string>
    <string name="err_ingredients">Please write ingredients for your meal </string>
    <string name="err_time">Please select cooking time </string>
    <string name="err_steps">Please write meal preparation steps </string>
    <string name="lb_no_items">No items added yet</string>
    <string name="lb_meal_details">Meal Details</string>
</resources>