<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_meals">

    <fragment
        android:id="@+id/navigation_all_meals"
        android:name="com.lisko.mealfactory.view.fragments.AllMealsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_all_meals" >
        <action
            android:id="@+id/action_navigation_all_meals_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_fav_meal"
        android:name="com.lisko.mealfactory.view.fragments.FavMealFragment"
        android:label="@string/title_fav_meal"
        tools:layout="@layout/fragment_fav_meal" />

    <fragment
        android:id="@+id/navigation_random_meal"
        android:name="com.lisko.mealfactory.view.fragments.RandomMealFragment"
        android:label="@string/title_random_meal"
        tools:layout="@layout/fragment_random_meal" />
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.lisko.mealfactory.view.fragments.MealDetailsFragment"
        android:label="@string/lb_meal_details"
        tools:layout="@layout/fragment_meal_details" >
        <argument
            android:name="meal_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>