<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="10dp"
    android:paddingEnd="40dp"
    android:paddingBottom="20dp"
    app:chainUseRtl="true">

    <TextView
        android:id="@+id/tv_selectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_selectImage"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_dialog_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/dialog_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_dialog_gallery"
        app:layout_constraintStart_toStartOf="@+id/tv_selectTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectTitle"
        app:srcCompat="@drawable/ic_camera" />

    <ImageView
        android:id="@+id/iv_dialog_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialog_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_selectTitle"
        app:layout_constraintStart_toEndOf="@+id/iv_dialog_camera"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectTitle"
        app:srcCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialog_camera"
        app:layout_constraintEnd_toEndOf="@+id/iv_dialog_camera"
        app:layout_constraintStart_toStartOf="@+id/iv_dialog_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_dialog_camera" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialog_gallery"
        app:layout_constraintEnd_toEndOf="@+id/iv_dialog_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_dialog_gallery"
        app:layout_constraintTop_toBottomOf="@+id/iv_dialog_gallery" />
</androidx.constraintlayout.widget.ConstraintLayout>